test/expected/const_cast_i-c++03.out
const cast x into int
                  ^
19: error: const_cast type must be a pointer, pointer-to-member, or reference
